Correction Safari

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -211,6 +211,7 @@ section {
           display: flex;
           border: none;
           outline: none;
+          margin: 0;
           max-width: 50%;
           padding-left: 20px;
           padding-top: 10px;
@@ -224,6 +225,7 @@ section {
         }
         button {
           border: none;
+          margin: 0;
           color: white;
           background-color: lightblue;
           padding: 20px 25px;
